[tool.poetry]
name = "project_1_Elskas_M25_555"
version = "0.1.0"
description = ""
authors = ["fenrirg6 <rbhbk2@gmail.com>"]
packages = [
     { include = "labyrinth_game" },
 ]
 
[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ruff = "^0.13.3"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
